# static_map

./: CMakeLists.txt  LICENSE  README.md
include/feniks/: static_map.hpp
sample/: CMakeLists.txt  sample.cpp  sample_different_types.cpp  sample_enumeration.cpp  sample_initialization.cpp  sample_integral.cpp
test/: CMakeLists.txt  test_simple.cpp
